--- a/AML-getting-started/mnist-simple-log-regression-model.ipynb
+++ b/AML-getting-started/mnist-simple-log-regression-model.ipynb
@@ -12,8 +12,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T15:03:49.995773Z",
-     "start_time": "2019-12-18T15:03:45.460845Z"
+     "end_time": "2019-12-20T18:09:15.240485Z",
+     "start_time": "2019-12-20T18:09:07.969746Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T13:51:47.937150Z",
-     "start_time": "2019-12-18T13:51:47.915148Z"
+     "end_time": "2019-12-20T18:13:18.977332Z",
+     "start_time": "2019-12-20T18:13:18.968330Z"
     }
    },
    "outputs": [],
@@ -78,8 +78,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T13:51:48.429304Z",
-     "start_time": "2019-12-18T13:51:47.942149Z"
+     "end_time": "2019-12-20T18:13:21.004224Z",
+     "start_time": "2019-12-20T18:13:20.605221Z"
     }
    },
    "outputs": [],
@@ -100,8 +100,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T13:51:48.435271Z",
-     "start_time": "2019-12-18T13:51:48.430269Z"
+     "end_time": "2019-12-20T18:13:24.164576Z",
+     "start_time": "2019-12-20T18:13:24.159577Z"
     }
    },
    "outputs": [],
@@ -121,8 +121,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T13:51:49.975363Z",
-     "start_time": "2019-12-18T13:51:48.437273Z"
+     "end_time": "2019-12-20T18:13:27.198300Z",
+     "start_time": "2019-12-20T18:13:26.055602Z"
     }
    },
    "outputs": [],
@@ -163,8 +163,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T13:52:06.597136Z",
-     "start_time": "2019-12-18T13:51:49.977364Z"
+     "end_time": "2019-12-20T16:31:24.274229Z",
+     "start_time": "2019-12-20T16:31:07.612180Z"
     }
    },
    "outputs": [],
@@ -203,8 +203,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T14:18:20.619062Z",
-     "start_time": "2019-12-18T14:18:20.616064Z"
+     "end_time": "2019-12-20T18:13:30.972860Z",
+     "start_time": "2019-12-20T18:13:30.967859Z"
     }
    },
    "outputs": [],
@@ -219,25 +219,30 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T14:19:25.197990Z",
-     "start_time": "2019-12-18T14:18:22.898906Z"
+     "start_time": "2019-12-20T18:13:32.732Z"
     }
    },
    "outputs": [],
    "source": [
     "from azureml.core import Workspace\n",
     "\n",
-    "subscription_id = '{azure-subscription-id}'\n",
-    "resource_group = '{resource-group-name}'\n",
+    "subscription_id = ''\n",
+    "resource_group = ''\n",
     "region = 'westeurope'\n",
     "\n",
-    "ws = Workspace.create(name='AMLSLearnworkspace',\n",
-    "                      subscription_id=subscription_id, \n",
-    "                      resource_group=resource_group,\n",
-    "                      create_resource_group = True,\n",
-    "                      location=region)\n",
-    "\n",
-    "print('AMLS Workspace created')"
+    "if os.path.exists(os.path.join(\".\", \".azureml\", \"config.json\")):\n",
+    "    ws = Workspace.from_config()\n",
+    "else:\n",
+    "    ws = Workspace.create(name='AMLSLearnworkspace',\n",
+    "                          subscription_id=subscription_id, \n",
+    "                          resource_group=resource_group,\n",
+    "                          create_resource_group = True,\n",
+    "                          location=region)\n",
+    "    \n",
+    "    print('AMLS Workspace created')    \n",
+    "    # Create the configuration file.\n",
+    "    ws.write_config()\n",
+    "    print('Configuration saved')    "
    ]
   },
   {
@@ -245,30 +250,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T14:19:32.497532Z",
-     "start_time": "2019-12-18T14:19:32.493530Z"
+     "end_time": "2019-12-20T16:39:53.064319Z",
+     "start_time": "2019-12-20T16:39:53.058320Z"
     }
    },
    "outputs": [],
    "source": [
     "# View workspace details\n",
     "ws.get_details()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-12-18T14:19:34.122157Z",
-     "start_time": "2019-12-18T14:19:34.117153Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Create the configuration file.\n",
-    "ws.write_config()\n",
-    "print('Configuration saved')"
    ]
   },
   {
@@ -281,7 +270,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-20T16:39:58.084414Z",
+     "start_time": "2019-12-20T16:39:57.729460Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from azureml.core import Experiment\n",
@@ -304,8 +298,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T14:20:02.724506Z",
-     "start_time": "2019-12-18T14:20:01.856058Z"
+     "end_time": "2019-12-20T17:21:26.852722Z",
+     "start_time": "2019-12-20T17:21:26.163460Z"
     }
    },
    "outputs": [],
@@ -316,15 +310,17 @@
     "\n",
     "# Step 1: name the cluster and set the minimal and maximal number of nodes \n",
     "compute_name = os.environ.get(\"AML_COMPUTE_CLUSTER_NAME\", \"cpucluster\")\n",
-    "min_nodes = os.environ.get(\"AML_COMPUTE_CLUSTER_MIN_NODES\", 0)\n",
+    "min_nodes = os.environ.get(\"AML_COMPUTE_CLUSTER_MIN_NODES\", 1)\n",
     "max_nodes = os.environ.get(\"AML_COMPUTE_CLUSTER_MAX_NODES\", 3)\n",
+    "idle_seconds_before_scaledown = 600\n",
     "\n",
     "# Step 2: choose environment variables \n",
     "vm_size = os.environ.get(\"AML_COMPUTE_CLUSTER_SKU\", \"STANDARD_D2_V2\")\n",
     "\n",
     "provisioning_config = AmlCompute.provisioning_configuration(vm_size = vm_size, \n",
     "                                                            min_nodes = min_nodes, \n",
-    "                                                            max_nodes = max_nodes)\n",
+    "                                                            max_nodes = max_nodes, \n",
+    "                                                            idle_seconds_before_scaledown = idle_seconds_before_scaledown)\n",
     "\n",
     "# create the cluster\n",
     "compute_target = ComputeTarget.create(ws, compute_name, provisioning_config)\n",
@@ -344,15 +340,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T14:22:12.603253Z",
-     "start_time": "2019-12-18T14:22:09.016673Z"
+     "end_time": "2019-12-20T17:45:42.954621Z",
+     "start_time": "2019-12-20T17:45:28.787698Z"
     }
    },
    "outputs": [],
    "source": [
     "#upload data by using get_default_datastore()\n",
     "ds = ws.get_default_datastore()\n",
-    "ds.upload(src_dir='./data', target_path='mnist', overwrite=True, show_progress=True)\n",
+    "ds.upload(src_dir='./data', target_path='data', overwrite=True, show_progress=True)\n",
     "\n",
     "print('Done')"
    ]
@@ -369,8 +365,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T14:28:38.708624Z",
-     "start_time": "2019-12-18T14:28:38.703620Z"
+     "end_time": "2019-12-20T17:22:23.832105Z",
+     "start_time": "2019-12-20T17:22:23.826103Z"
     }
    },
    "outputs": [],
@@ -389,8 +385,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T14:31:48.451669Z",
-     "start_time": "2019-12-18T14:31:48.445665Z"
+     "end_time": "2019-12-20T17:25:29.360352Z",
+     "start_time": "2019-12-20T17:25:29.353351Z"
     }
    },
    "outputs": [],
@@ -432,10 +428,12 @@
     "parser = argparse.ArgumentParser()\n",
     "parser.add_argument('--data-folder', type=str, dest='data_folder', help='data folder mounting point')\n",
     "parser.add_argument('--regularization', type=float, dest='reg', default=0.01, help='regularization rate')\n",
+    "parser.add_argument('--local', type=bool, dest='local', default=False, \n",
+    "                               help='Flag indicating where model training takes place')\n",
     "args = parser.parse_args()\n",
     "\n",
     "###\n",
-    "data_folder = os.path.join(args.data_folder, 'mnist')\n",
+    "data_folder = os.path.join(args.data_folder, 'data', 'mnist')\n",
     "print('Data folder:', data_folder)\n",
     "\n",
     "# load the train and test set into numpy arrays\n",
@@ -470,7 +468,16 @@
     "\n",
     "os.makedirs('outputs', exist_ok=True)\n",
     "# note file saved in the outputs folder is automatically uploaded into experiment record\n",
-    "joblib.dump(value=clf, filename='outputs/sklearn_mnist_model.pkl')"
+    "joblib.dump(value=clf, filename='outputs/sklearn_mnist_model.pkl')\n",
+    "\n",
+    "# register an Azure ML model (it's only possible when training in the AMLS)\n",
+    "if args.local == False:\n",
+    "    model = run.register_model(model_name='sklearn_mnist_model.pkl',\n",
+    "                               model_path='outputs/sklearn_mnist_model.pkl',\n",
+    "                               tags = {'area': \"MNIST\", 'type': \"sklearn\"},\n",
+    "                               description = \"identify numbers\")\n",
+    "\n",
+    "    print(model.name, model.id, model.version, sep='\\t')"
    ]
   },
   {
@@ -492,13 +499,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T15:09:31.081886Z",
-     "start_time": "2019-12-18T15:07:47.968821Z"
+     "end_time": "2019-12-20T17:27:15.389468Z",
+     "start_time": "2019-12-20T17:25:31.769042Z"
     }
    },
    "outputs": [],
    "source": [
-    "! python ./trial_model_mnist/train.py --data-folder=./data --regularization=0.6"
+    "! python ./trial_model_mnist/train.py --data-folder=. --regularization=0.6 --local=True"
    ]
   },
   {
@@ -513,8 +520,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T15:12:40.135703Z",
-     "start_time": "2019-12-18T15:12:37.217934Z"
+     "end_time": "2019-12-20T17:27:20.101561Z",
+     "start_time": "2019-12-20T17:27:20.057429Z"
     }
    },
    "outputs": [],
@@ -525,7 +532,8 @@
     "\n",
     "script_params = {\n",
     "    '--data-folder': ds.as_mount(),\n",
-    "    '--regularization': 0.5\n",
+    "    '--regularization': 0.5,\n",
+    "    '--local': False\n",
     "}\n",
     "\n",
     "#import the Scikit-learn package \n",
@@ -541,8 +549,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-18T14:39:11.670411Z",
-     "start_time": "2019-12-18T14:38:59.294741Z"
+     "end_time": "2019-12-20T17:27:42.109280Z",
+     "start_time": "2019-12-20T17:27:23.716905Z"
     }
    },
    "outputs": [],
@@ -554,7 +562,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-20T17:38:51.960974Z",
+     "start_time": "2019-12-20T17:38:51.061978Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Get the result\n",
