Trying to register model…

--- a/AML-getting-started/mnist-simple-log-regression-model.ipynb
+++ b/AML-getting-started/mnist-simple-log-regression-model.ipynb
@@ -12,8 +12,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T18:09:15.240485Z",
-     "start_time": "2019-12-20T18:09:07.969746Z"
+     "end_time": "2019-12-24T09:14:48.177112Z",
+     "start_time": "2019-12-24T09:14:40.225220Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T18:13:18.977332Z",
-     "start_time": "2019-12-20T18:13:18.968330Z"
+     "end_time": "2019-12-24T09:14:52.307893Z",
+     "start_time": "2019-12-24T09:14:52.296875Z"
     }
    },
    "outputs": [],
@@ -78,8 +78,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T18:13:21.004224Z",
-     "start_time": "2019-12-20T18:13:20.605221Z"
+     "end_time": "2019-12-24T09:14:54.723477Z",
+     "start_time": "2019-12-24T09:14:54.143678Z"
     }
    },
    "outputs": [],
@@ -100,8 +100,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T18:13:24.164576Z",
-     "start_time": "2019-12-20T18:13:24.159577Z"
+     "end_time": "2019-12-24T09:14:56.116601Z",
+     "start_time": "2019-12-24T09:14:56.111795Z"
     }
    },
    "outputs": [],
@@ -121,8 +121,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T18:13:27.198300Z",
-     "start_time": "2019-12-20T18:13:26.055602Z"
+     "end_time": "2019-12-24T09:15:00.237040Z",
+     "start_time": "2019-12-24T09:14:58.727767Z"
     }
    },
    "outputs": [],
@@ -163,8 +163,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T16:31:24.274229Z",
-     "start_time": "2019-12-20T16:31:07.612180Z"
+     "end_time": "2019-12-24T09:15:20.416273Z",
+     "start_time": "2019-12-24T09:15:02.229345Z"
     }
    },
    "outputs": [],
@@ -195,6 +195,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Load Azure Subscription details"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-12-24T09:22:37.965091Z",
+     "start_time": "2019-12-24T09:22:37.959677Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import configparser\n",
+    "\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read('config.ini')\n",
+    "\n",
+    "subscription_id = config['AZURE']['SUBSCRIPTION_ID']\n",
+    "resource_group = config['AZURE']['RESOURCE_GROUP']\n",
+    "region = 'westeurope'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Create a workspace"
    ]
   },
@@ -203,8 +231,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T18:13:30.972860Z",
-     "start_time": "2019-12-20T18:13:30.967859Z"
+     "end_time": "2019-12-24T09:15:40.424128Z",
+     "start_time": "2019-12-24T09:15:40.420877Z"
     }
    },
    "outputs": [],
@@ -219,16 +247,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-12-20T18:13:32.732Z"
+     "end_time": "2019-12-24T09:23:45.037581Z",
+     "start_time": "2019-12-24T09:22:39.791687Z"
     }
    },
    "outputs": [],
    "source": [
     "from azureml.core import Workspace\n",
-    "\n",
-    "subscription_id = ''\n",
-    "resource_group = ''\n",
-    "region = 'westeurope'\n",
     "\n",
     "if os.path.exists(os.path.join(\".\", \".azureml\", \"config.json\")):\n",
     "    ws = Workspace.from_config()\n",
@@ -250,8 +275,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T16:39:53.064319Z",
-     "start_time": "2019-12-20T16:39:53.058320Z"
+     "end_time": "2019-12-24T09:23:53.339678Z",
+     "start_time": "2019-12-24T09:23:53.334852Z"
     }
    },
    "outputs": [],
@@ -272,8 +297,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T16:39:58.084414Z",
-     "start_time": "2019-12-20T16:39:57.729460Z"
+     "end_time": "2019-12-24T09:24:09.112144Z",
+     "start_time": "2019-12-24T09:24:06.759750Z"
     }
    },
    "outputs": [],
@@ -281,7 +306,7 @@
     "from azureml.core import Experiment\n",
     "\n",
     "#Create an experiment\n",
-    "experiment = Experiment(workspace = ws, name = \"amls-learn-experimentnew5\")\n",
+    "experiment = Experiment(workspace = ws, name = \"amls-learn-experiment\")\n",
     "\n",
     "print('Experiment created')"
    ]
@@ -298,8 +323,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T17:21:26.852722Z",
-     "start_time": "2019-12-20T17:21:26.163460Z"
+     "end_time": "2019-12-24T09:24:26.356708Z",
+     "start_time": "2019-12-24T09:24:24.413325Z"
     }
    },
    "outputs": [],
@@ -340,8 +365,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T17:45:42.954621Z",
-     "start_time": "2019-12-20T17:45:28.787698Z"
+     "end_time": "2019-12-24T09:26:23.403844Z",
+     "start_time": "2019-12-24T09:26:10.496625Z"
     }
    },
    "outputs": [],
@@ -365,8 +390,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T17:22:23.832105Z",
-     "start_time": "2019-12-20T17:22:23.826103Z"
+     "end_time": "2019-12-24T09:26:27.492847Z",
+     "start_time": "2019-12-24T09:26:27.488582Z"
     }
    },
    "outputs": [],
@@ -385,8 +410,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T17:25:29.360352Z",
-     "start_time": "2019-12-20T17:25:29.353351Z"
+     "end_time": "2019-12-24T10:52:51.295179Z",
+     "start_time": "2019-12-24T10:52:51.289558Z"
     }
    },
    "outputs": [],
@@ -402,11 +427,24 @@
     "from sklearn.externals import joblib\n",
     "\n",
     "from azureml.core import Run\n",
+    "from azureml.core.model import Model\n",
     "# from utils import load_data\n",
     "\n",
     "import gzip\n",
     "import struct\n",
     "\n",
+    "\n",
+    "def str2bool(v):\n",
+    "    if isinstance(v, bool):\n",
+    "        return v\n",
+    "    if v.lower() in ('yes', 'true', 't', 'y', '1'):\n",
+    "        return True\n",
+    "    elif v.lower() in ('no', 'false', 'f', 'n', '0'):\n",
+    "        return False\n",
+    "    else:\n",
+    "        raise argparse.ArgumentTypeError('Boolean value expected.')\n",
+    "\n",
+    "        \n",
     "# load compressed MNIST gz files and return numpy arrays\n",
     "def load_data(filename, label=False):\n",
     "    with gzip.open(filename) as gz:\n",
@@ -428,7 +466,7 @@
     "parser = argparse.ArgumentParser()\n",
     "parser.add_argument('--data-folder', type=str, dest='data_folder', help='data folder mounting point')\n",
     "parser.add_argument('--regularization', type=float, dest='reg', default=0.01, help='regularization rate')\n",
-    "parser.add_argument('--local', type=bool, dest='local', default=False, \n",
+    "parser.add_argument('--local', type=str2bool, dest='local', default=False,\n",
     "                               help='Flag indicating where model training takes place')\n",
     "args = parser.parse_args()\n",
     "\n",
@@ -471,12 +509,20 @@
     "joblib.dump(value=clf, filename='outputs/sklearn_mnist_model.pkl')\n",
     "\n",
     "# register an Azure ML model (it's only possible when training in the AMLS)\n",
-    "if args.local == False:\n",
+    "local = args.local\n",
+    "print(f\"Local: {local}, {type(local)}\")\n",
+    "\n",
+    "if not local:\n",
+    "    print(\"Registering model...\")   \n",
     "    model = run.register_model(model_name='sklearn_mnist_model.pkl',\n",
-    "                               model_path='outputs/sklearn_mnist_model.pkl',\n",
+    "                               model_path='sklearn_mnist_model.pkl',\n",
     "                               tags = {'area': \"MNIST\", 'type': \"sklearn\"},\n",
     "                               description = \"identify numbers\")\n",
     "\n",
+    "#     model = Model.register(model_path='./outputs', \n",
+    "#                            model_name='sklearn_mnist_model.pkl',\n",
+    "#                            description = \"identify numbers\")\n",
+    "    \n",
     "    print(model.name, model.id, model.version, sep='\\t')"
    ]
   },
@@ -499,8 +545,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T17:27:15.389468Z",
-     "start_time": "2019-12-20T17:25:31.769042Z"
+     "end_time": "2019-12-24T10:20:58.336138Z",
+     "start_time": "2019-12-24T10:20:54.614026Z"
     }
    },
    "outputs": [],
@@ -520,8 +566,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T17:27:20.101561Z",
-     "start_time": "2019-12-20T17:27:20.057429Z"
+     "end_time": "2019-12-24T10:52:53.851938Z",
+     "start_time": "2019-12-24T10:52:53.807367Z"
     }
    },
    "outputs": [],
@@ -532,7 +578,7 @@
     "\n",
     "script_params = {\n",
     "    '--data-folder': ds.as_mount(),\n",
-    "    '--regularization': 0.5,\n",
+    "    '--regularization': 0.6,\n",
     "    '--local': False\n",
     "}\n",
     "\n",
@@ -549,8 +595,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T17:27:42.109280Z",
-     "start_time": "2019-12-20T17:27:23.716905Z"
+     "end_time": "2019-12-24T10:53:04.442374Z",
+     "start_time": "2019-12-24T10:52:54.973929Z"
     }
    },
    "outputs": [],
@@ -564,8 +610,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-20T17:38:51.960974Z",
-     "start_time": "2019-12-20T17:38:51.061978Z"
+     "end_time": "2019-12-24T09:42:37.421295Z",
+     "start_time": "2019-12-24T09:42:37.166401Z"
     }
    },
    "outputs": [],
@@ -591,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.5"
   },
   "toc": {
    "base_numbering": 1,
@@ -604,7 +650,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
