Finally registered model!

--- a/AML-getting-started/mnist-simple-log-regression-model.ipynb
+++ b/AML-getting-started/mnist-simple-log-regression-model.ipynb
@@ -12,8 +12,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:14:48.177112Z",
-     "start_time": "2019-12-24T09:14:40.225220Z"
+     "end_time": "2019-12-27T08:20:03.874466Z",
+     "start_time": "2019-12-27T08:19:51.920316Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:14:52.307893Z",
-     "start_time": "2019-12-24T09:14:52.296875Z"
+     "end_time": "2019-12-27T08:20:49.111112Z",
+     "start_time": "2019-12-27T08:20:49.102114Z"
     }
    },
    "outputs": [],
@@ -78,8 +78,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:14:54.723477Z",
-     "start_time": "2019-12-24T09:14:54.143678Z"
+     "end_time": "2019-12-27T08:20:52.275665Z",
+     "start_time": "2019-12-27T08:20:51.853715Z"
     }
    },
    "outputs": [],
@@ -100,8 +100,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:14:56.116601Z",
-     "start_time": "2019-12-24T09:14:56.111795Z"
+     "end_time": "2019-12-27T08:20:57.419038Z",
+     "start_time": "2019-12-27T08:20:57.414042Z"
     }
    },
    "outputs": [],
@@ -121,8 +121,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:15:00.237040Z",
-     "start_time": "2019-12-24T09:14:58.727767Z"
+     "end_time": "2019-12-27T08:21:00.674726Z",
+     "start_time": "2019-12-27T08:20:59.309597Z"
     }
    },
    "outputs": [],
@@ -163,8 +163,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:15:20.416273Z",
-     "start_time": "2019-12-24T09:15:02.229345Z"
+     "end_time": "2019-12-27T08:21:19.986529Z",
+     "start_time": "2019-12-27T08:21:04.256915Z"
     }
    },
    "outputs": [],
@@ -203,8 +203,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:22:37.965091Z",
-     "start_time": "2019-12-24T09:22:37.959677Z"
+     "end_time": "2019-12-27T08:21:27.550342Z",
+     "start_time": "2019-12-27T08:21:27.545339Z"
     }
    },
    "outputs": [],
@@ -231,8 +231,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:15:40.424128Z",
-     "start_time": "2019-12-24T09:15:40.420877Z"
+     "end_time": "2019-12-27T08:21:29.204575Z",
+     "start_time": "2019-12-27T08:21:29.201570Z"
     }
    },
    "outputs": [],
@@ -247,8 +247,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:23:45.037581Z",
-     "start_time": "2019-12-24T09:22:39.791687Z"
+     "end_time": "2019-12-27T08:23:03.326711Z",
+     "start_time": "2019-12-27T08:21:51.374274Z"
     }
    },
    "outputs": [],
@@ -275,8 +275,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:23:53.339678Z",
-     "start_time": "2019-12-24T09:23:53.334852Z"
+     "end_time": "2019-12-27T08:24:02.270868Z",
+     "start_time": "2019-12-27T08:24:02.265865Z"
     }
    },
    "outputs": [],
@@ -297,8 +297,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:24:09.112144Z",
-     "start_time": "2019-12-24T09:24:06.759750Z"
+     "end_time": "2019-12-27T08:24:08.380267Z",
+     "start_time": "2019-12-27T08:24:05.865226Z"
     }
    },
    "outputs": [],
@@ -323,8 +323,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:24:26.356708Z",
-     "start_time": "2019-12-24T09:24:24.413325Z"
+     "end_time": "2019-12-27T08:24:13.212150Z",
+     "start_time": "2019-12-27T08:24:11.567762Z"
     }
    },
    "outputs": [],
@@ -365,8 +365,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:26:23.403844Z",
-     "start_time": "2019-12-24T09:26:10.496625Z"
+     "end_time": "2019-12-27T08:32:55.036119Z",
+     "start_time": "2019-12-27T08:32:52.605479Z"
     }
    },
    "outputs": [],
@@ -390,8 +390,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T09:26:27.492847Z",
-     "start_time": "2019-12-24T09:26:27.488582Z"
+     "end_time": "2019-12-27T08:32:59.665374Z",
+     "start_time": "2019-12-27T08:32:59.659378Z"
     }
    },
    "outputs": [],
@@ -410,8 +410,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T10:52:51.295179Z",
-     "start_time": "2019-12-24T10:52:51.289558Z"
+     "end_time": "2019-12-27T10:12:45.885664Z",
+     "start_time": "2019-12-27T10:12:45.876647Z"
     }
    },
    "outputs": [],
@@ -422,6 +422,9 @@
     "import os\n",
     "import numpy as np\n",
     "import glob\n",
+    "import time\n",
+    "\n",
+    "from datetime import datetime\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.externals import joblib\n",
@@ -505,8 +508,22 @@
     "run.log('accuracy', np.float(acc))\n",
     "\n",
     "os.makedirs('outputs', exist_ok=True)\n",
-    "# note file saved in the outputs folder is automatically uploaded into experiment record\n",
-    "joblib.dump(value=clf, filename='outputs/sklearn_mnist_model.pkl')\n",
+    "\n",
+    "# Note, file saved in the outputs folder is automatically uploaded into experiment record.\n",
+    "model_filename = 'outputs/sklearn_mnist_model.pkl'\n",
+    "joblib.dump(value=clf, filename=model_filename)\n",
+    "\n",
+    "# Due to latency we need to wait (not more than 60 seconds) until the model file is really uploaded. \n",
+    "timestamp = datetime.now()\n",
+    "while (model_filename not in run.get_file_names()) or ((datetime.now() - timestamp).seconds <= 60) :\n",
+    "    print(\"Need to wait...\")\n",
+    "    time.sleep(1)  # wait 1 second\n",
+    "\n",
+    "print('========================')\n",
+    "print('Files associated with that run:')\n",
+    "print(run.get_file_names())\n",
+    "print('========================')\n",
+    "\n",
     "\n",
     "# register an Azure ML model (it's only possible when training in the AMLS)\n",
     "local = args.local\n",
@@ -514,14 +531,10 @@
     "\n",
     "if not local:\n",
     "    print(\"Registering model...\")   \n",
-    "    model = run.register_model(model_name='sklearn_mnist_model.pkl',\n",
-    "                               model_path='sklearn_mnist_model.pkl',\n",
+    "    model = run.register_model(model_name='sklearn_mnist',\n",
+    "                               model_path=os.path.join('.', 'outputs', 'sklearn_mnist_model.pkl'),\n",
     "                               tags = {'area': \"MNIST\", 'type': \"sklearn\"},\n",
     "                               description = \"identify numbers\")\n",
-    "\n",
-    "#     model = Model.register(model_path='./outputs', \n",
-    "#                            model_name='sklearn_mnist_model.pkl',\n",
-    "#                            description = \"identify numbers\")\n",
     "    \n",
     "    print(model.name, model.id, model.version, sep='\\t')"
    ]
@@ -566,8 +579,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T10:52:53.851938Z",
-     "start_time": "2019-12-24T10:52:53.807367Z"
+     "end_time": "2019-12-27T10:12:50.124140Z",
+     "start_time": "2019-12-27T10:12:50.083947Z"
     }
    },
    "outputs": [],
@@ -595,8 +608,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-12-24T10:53:04.442374Z",
-     "start_time": "2019-12-24T10:52:54.973929Z"
+     "end_time": "2019-12-27T10:13:02.196928Z",
+     "start_time": "2019-12-27T10:12:52.358599Z"
     }
    },
    "outputs": [],
@@ -637,7 +650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
